[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

[profilel.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full", "tracing"] }
