[package]
name = "cdn"
version = "0.1.0"
edition = "2021"
default-run = "cdn"

[workspace]
resolver = "2"
members = ["prisma-cli"]

[profilel.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
rs-snowflake = "0.6.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full", "tracing"] }
infer = "0.13.0"

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "postgresql",
    "migrations",
] }
