[package]
name = "cdn"
version = "0.1.0"
edition = "2021"
default-run = "cdn"
license = "MIT"

[workspace]
resolver = "2"
members = ["prisma-cli"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.18"
rs-snowflake = "0.6.0"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full", "tracing"] }
infer = "0.13.0"

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "postgresql",
    "migrations",
] }
redis = { version = "0.23.0", default-features = false, features = [
    "tokio-comp",
] }
redis-macros = "0.1.1"
serde_json = "1.0.96"
futures = "0.3.28"
